Bug 150501 - Flying windows Border lines and Border lines Stil doesnt work any more in Ver 7...
Summary: Flying windows Border lines and Border lines Stil doesnt work any more in Ve...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.4.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.5.0 target:7.4.3
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2022-08-19 14:59 UTC by Pattevugel
Modified: 2022-10-07 00:54 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
video from ver 7 (11.07 MB, video/mp4)
2022-10-06 15:49 UTC, raal
Details
video from ver 6 (9.78 MB, video/mp4)
2022-10-06 15:50 UTC, raal
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Pattevugel 2022-08-19 14:59:15 UTC
Description:
In earlier versions until 6... the Window border or outline line as well as border stile could be placed free on the work sheet. 
In the last updated 7.4 and earlier 7... the window border lines and stiles disapear if you pull it to the sheet surface.
Only the lines colour will still work so as before. 
So I have  reinstalled my older version6.. and will hope that in the next update it will work again as before.
[sorry bad English :-(  ]

Steps to Reproduce:
1.open calc
2.pull window border lines from ikon  by the left mouse button to the sheet


Actual Results:
3.after release the mouse button the window disapeaars 

Expected Results:
4. the window should fly  on the spreadsheet surface like ver 6.. and the window border colours that will still work correctly


Reproducible: Always


User Profile Reset: Yes


OpenGL enabled: Yes

Additional Info:
[Information automatically included from LibreOffice]
Locale: de
Module: SpreadsheetDocument
[Information guessed from browser]
OS: Windows (All)
OS is 64bit: no
Comment 1 raal 2022-10-04 20:35:05 UTC
I'm sorry, I don't understand. Please can you make a video of your steps from version 6? Thank you.
Comment 2 raal 2022-10-06 15:49:23 UTC
Confirm with Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: a0bc0cc81b597aa81189355a8125753d6b873cce
CPU threads: 4; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded
Comment 3 raal 2022-10-06 15:49:48 UTC
Created attachment 182877 [details]
video from ver 7
Comment 4 raal 2022-10-06 15:50:12 UTC
Created attachment 182878 [details]
video from ver 6
Comment 5 raal 2022-10-06 16:01:26 UTC
This seems to have begun at the below commit.
Adding Cc: to Caolán McNamara; Could you possibly take a look at this one?
Thanks
 4d60c8440eb4b3da7977f676a7f61c9dbb26c0d7 is the first bad commit
commit 4d60c8440eb4b3da7977f676a7f61c9dbb26c0d7
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Fri Jan 17 16:48:43 2020 +0100

    source f7e013657df0a1955d901d79d6df806e5007a9f8
    


https://gerrit.libreoffice.org/c/core/+/86959
Comment 6 Caolán McNamara 2022-10-06 16:29:51 UTC
these little floating utility windows are a real pain to continue to support, at some stage they're going to run out of road I think
Comment 7 Commit Notification 2022-10-06 18:58:57 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/dcca81a4ecc0dbbb9d2f399c5a59dac0524778d2

Resolves: tdf#150501 borders and lines should be tearable

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Caolán McNamara 2022-10-06 18:59:47 UTC
done in trunk, backport to 7-4 in gerrit
Comment 9 Commit Notification 2022-10-07 00:54:53 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/86d0bcccb862ab631358c1f31aef0d9dc07c3870

Resolves: tdf#150501 borders and lines should be tearable

It will be available in 7.4.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.