Resolves: tdf#150501 borders and lines should be tearable

Change-Id: I683dcf5cdf2289fde28be4990c10525fd60b88e1
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/140973
Tested-by: Jenkins
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>